--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,15 @@ h1 {
   text-align: center;
 }
 
-#number-container .numbers {
+.numbers {
   display: inline-block;
   font-size: 2.5em;
   padding: 5px 10px 5px 10px;
-  border: solid;
+  border: solid #000000;
   width: 40px;
   margin: 2px;
+  background-color: #adada7;
+}
+.numbers.highlight {
+  background-color: yellow;
 }
