--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
   text-align: center;
 }
 
-.numbers {
+.boardCells {
   display: inline-block;
   font-size: 2.5em;
   padding: 5px 10px 5px 10px;
@@ -19,6 +19,10 @@ h1 {
   margin: 2px;
   background-color: #adada7;
 }
-.numbers.highlight {
+.boardCells.highlight {
   background-color: yellow;
+}
+
+#button-container {
+  margin: 0 0 20px 0;
 }
