--- a/styles.css
+++ b/styles.css
@@ -24,5 +24,13 @@ h1 {
 }
 
 #button-container {
-  margin: 0 0 20px 0;
+  margin-bottom: 20px;
+}
+
+#current-number {
+  margin-left: 30px;
+  display: inline-block;
+  font-size: 1.5em;
+  color: blue;
+  font-weight: bold;
 }
